Add an activity page

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,18 +4,22 @@ GEN_DEPS = magic-mime base64 yaml omd calendar atdgen
 .PHONY: install
 install: gen
 
-gen: utils.ml lenient_iso8601.ml sounds_t.mli sounds_t.ml sounds_j.mli sounds_j.ml gen.ml
+define atd
+$(1)_t.mli $(1)_t.ml $(1)_j.mli $(1)_j.ml
+endef
+
+gen: utils.ml lenient_iso8601.ml $(call atd, sounds) $(call atd, github) gen.ml
 	ocamlfind $(CC) -linkpkg \
 		-package $(shell tr ' ' ',' <<< "$(GEN_DEPS)") \
 		-o $@ $^
 
-sounds_t.mli sounds_t.ml sounds_j.mli sounds_j.ml: sounds.atd
+%_t.mli %_t.ml %_j.mli %_j.ml: %.atd
 	atdgen -t $<
 	atdgen -j $<
 
 .PHONY: clean
 clean:
-	rm -rf gen *.cmi *.cmo sounds_*.ml
+	rm -rf gen *.cmi *.cmo *_{j,t}.{ml,mli}
 
 .PHONY: deps
 deps:
