--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,8 @@ define atd
 $(1)_t.mli $(1)_t.ml $(1)_j.mli $(1)_j.ml
 endef
 
-gen: lenient_iso8601.ml $(call atd, sounds) $(call atd, github) \
+gen: lenient_iso8601.ml \
+	$(call atd, sounds) $(call atd, github) $(call atd, gallery) \
 	common.ml utils.ml html.ml gen.ml
 	ocamlfind $(CC) -linkpkg \
 		-package $(shell echo "$(GEN_DEPS)" | tr ' ' ',') \
