--- a/.github/aws.config.template
+++ b/.github/aws.config.template
@@ -4,4 +4,4 @@ aws_secret_access_key = $AWS_SECRET_ACCESS_KEY
 
 [profile $AWS_PROFILE]
 source_profile = default
-role_arn = $ECR_ROLE_ARN
+role_arn = $ROLE_ARN
