Begin porting tasks

--- a/meta/setup.cfg
+++ b/meta/setup.cfg
@@ -16,4 +16,8 @@ where = src
 
 [options.entry_points]
 console_scripts =
-  wwwo-meta = meta.cli:main
+  wwwo-github = meta.tasks.github:main
+  wwwo-list = meta.tasks.list:main
+  wwwo-projects = meta.tasks.projects:main
+  wwwo-sounds = meta.tasks.sounds:main
+  wwwo-twitch = meta.tasks.twitch:main
