Generate the metadata

--- a/meta/setup.cfg
+++ b/meta/setup.cfg
@@ -18,6 +18,7 @@ where = src
 console_scripts =
   wwwo-github = meta.tasks.github:main
   wwwo-list = meta.tasks.list:main
+  wwwo-project = meta.tasks.project:main
   wwwo-projects = meta.tasks.projects:main
   wwwo-sounds = meta.tasks.sounds:main
   wwwo-twitch = meta.tasks.twitch:main
