Run generator in the Lambda function

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,21 @@
-.gitignore
+.env
+.*.flag
+
+build
+**/*.egg-info
+
+.fontawesome
+.workdirs
+workdir
+
+**/.opam
+**/.switch*
+**/.deps*
+
+**/*.exe
+**/*.cmi
+**/*.cmo
+**/*_j.ml
+**/*_j.mli
+**/*_t.ml
+**/*_t.mli
