--- a/lambda/pyproject.toml
+++ b/lambda/pyproject.toml
@@ -1,3 +1,15 @@
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "lambda"
+version = "0.0.1"
+dependencies = [ "awslambdaric >= 2.0.7, < 2.1" ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+namespaces = false
+
+[project.scripts]
+wwwo-lambda = "Lambda.harness:run"
