--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -12,6 +12,15 @@ jobs:
         LAMBDA_ARN: ${{ vars.LAMBDA_ARN }}
         AWS_PROFILE: ecr
     steps:
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        driver-opts: image=moby/buildkit:v0.12.2
+        buildkitd-flags: --debug
+
+    - name: Expose GitHub Runtime
+      uses: crazy-max/ghaction-github-runtime@v3
+
     - name: Check out repository code
       uses: actions/checkout@v3
       with:
