Attempt #1 at ocamlmktop

--- a/generator/src/Makefile
+++ b/generator/src/Makefile
@@ -4,9 +4,17 @@ include buildml.mk
 .PHONY: build
 build: gen.exe
 
-gen.exe: lenient_iso8601.ml \
+.PHONY: all
+all: gen.exe top.exe
+
+COMMON = lenient_iso8601.ml common.ml utils.ml html.ml
+ATDs = \
 	$(call atd, sounds) $(call atd, twitch) \
 	$(call atd, github) $(call atd, practice) \
 	$(call atd, gallery) $(call atd, project) \
-	common.ml utils.ml html.ml gen.ml
+
+gen.exe: $(COMMON) $(ATDs) gen.ml
 	$(BUILDML_OCAMLC) -o $@ $^
+
+top.exe: $(COMMON)
+	$(BUILDML_OCAMLMKTOP) -o $@ $^
