--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,8 @@
-name: Build and upload Docker image
+name: Build, upload and publish
 on: [ push ]
 
 jobs:
-  ubuntu:
+  publish:
     runs-on: ubuntu-latest
     env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
