Add action and turn projects

--- a/content/projects.json
+++ b/content/projects.json
@@ -78,6 +78,8 @@
         "AoC",
         "lua-hack",
         "xpanel",
-        "fetch"
+        "fetch",
+        "action",
+        "turn"
     ]
 }
