Add fetch and texhelp projects

--- a/content/projects.json
+++ b/content/projects.json
@@ -72,7 +72,8 @@
         "twitch-cli",
         "h",
         "openbsd",
-        "libr"
+        "libr",
+        "texhelp"
     ],
     "sourcehut": [
         "AoC",
@@ -80,6 +81,7 @@
         "xpanel",
         "fetch",
         "action",
-        "turn"
+        "turn",
+        "fetch"
     ]
 }
