--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "PyGithub >= 2.1.1, < 2.2",
   "python-magic >= 0.4.27, < 0.5",
   "requests >= 2.31.0, < 2.32",
+  "PyYAML >= 6.0.1, < 6.1",
 ]
 
 [tool.setuptools.packages.find]
