--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -19,7 +19,7 @@ namespaces = false
 
 [project.scripts]
 wwwo-github = "tasks.github:main"
-wwwo-list = "tasks.list:main"
+wwwo-gallery = "tasks.gallery:main"
 wwwo-project = "tasks.project:main"
 wwwo-projects = "tasks.projects:main"
 wwwo-sounds = "tasks.sounds:main"
