--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -26,3 +26,4 @@ wwwo-sounds = "tasks.sounds:main"
 wwwo-twitch = "tasks.twitch:main"
 wwwo-upload = "tasks.upload:main"
 wwwo-purge = "tasks.purge:main"
+wwwo-resume = "tasks.resume:main"
