--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "requests >= 2.31.0, < 2.32",
   "PyYAML >= 6.0.1, < 6.1",
 ]
+requires-python = ">=3.11"
 
 [tool.setuptools.packages.find]
 where = ["src"]
