--- a/content/projects.json
+++ b/content/projects.json
@@ -83,6 +83,7 @@
         "action",
         "turn",
         "fetch",
-        "go-pkg-proxy"
+        "go-pkg-proxy",
+        "scripts"
     ]
 }
