--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
   "python-magic >= 0.4.27, < 0.5",
   "requests >= 2.31.0, < 2.32",
   "PyYAML >= 6.0.1, < 6.1",
+  "pytz >= 2024.2",
 ]
 requires-python = ">=3.11"
 
