Restyle the activity page and snippet

--- a/generator/src/Makefile
+++ b/generator/src/Makefile
@@ -16,7 +16,7 @@ ATDs = \
 	$(call atd, gallery) $(call atd, project) \
 	$(call atd, resume)
 
-gen.exe: $(COMMON) $(ATDs) gen.ml
+gen.exe: $(COMMON) $(ATDs) activity.ml gen.ml
 	$(BUILDML_OCAMLC) -o $@ $^
 
 top.exe: $(COMMON)
