--- a/tasks/pyproject.toml
+++ b/tasks/pyproject.toml
@@ -1,19 +1,19 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools >= 75.2.0, < 76"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "tasks"
 version = "0.0.1"
 dependencies = [
-  "boto3 >= 1.28.62, < 1.29",
-  "PyGithub >= 2.1.1, < 2.2",
+  "boto3 >= 1.35.50, < 2",
+  "PyGithub >= 2.4.0, < 3",
   "python-magic >= 0.4.27, < 0.5",
-  "requests >= 2.31.0, < 2.32",
-  "PyYAML >= 6.0.1, < 6.1",
+  "requests >= 2.32.3, < 3",
+  "PyYAML >= 6.0.2, < 7",
   "pytz >= 2024.2",
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 
 [tool.setuptools.packages.find]
 where = ["src"]
