Don't try it out no longer
[skip ci]

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: Build, upload and publish
 on:
   push:
-    branches: [ master, update-dependencies ]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
