Add the continuously project

--- a/content/projects.json
+++ b/content/projects.json
@@ -82,7 +82,11 @@
             "favorite": true
         },
         "libr",
-        "texhelp"
+        "texhelp",
+        {
+            "name": "continuously",
+            "favorite": true
+        }
     ],
     "sourcehut": [
         "AoC",
