Move the favorite projects to its own section

--- a/content/projects.json
+++ b/content/projects.json
@@ -60,6 +60,7 @@
         "silly-church",
         "tabs-vs-spaces",
         "dvorak",
+        "xhook",
         "git-audit",
         "displayswitcheroo",
         "libpquv",
@@ -99,6 +100,7 @@
         "go-pkg-proxy",
         "scripts",
         "dot-nvim",
-        "media"
+        "media",
+        "templates"
     ]
 }
